# decision-trace

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOITCE  NOTICE  README.md  contract.yaml  decision-trace.db  pyproject.toml  refunds.jsonl  repro.sh  repro_client.py  repro_output.jsonl
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: publish-java.yml  publish-python.yml
collector/decision_trace_collector/: main.py  validate.py
collector/tests/: test_ingest_validation.py
contracts/: decision-event.schema.yaml  decision-registry.template.yaml
decision_trace/: __init__.py  cli.py  linter.py  model.py  time.py  tracer.py  validate.py
decision_trace/exporters/: __init__.py  base.py
docs/: architecture.md  concepts.md  decision-analytics-architecture.md  enterprise-adoption.md  java-enterprise-guide.md  java-golden-flow-walkthrough.md  java-quickstart.md  java-runtime-architecture.md  migration.md  otel-mapping-notes.md  releasing.md  safety.md  tutorial-your-first-decision-graph.md
docs/adr/: 0001-java-sdk-invariants.md
docs/spec/: v1.1_plan.md
docs/spec/schema/: decision-trace-event-1.0.json
examples/: README.md  refund_demo.py
examples/policy_failure_and_evaluation/: emit_evaluation_later.py
sdk/java/: README.md  pom.xml
sdk/java/decision-trace-benchmarks/: pom.xml
sdk/java/decision-trace-benchmarks/src/main/java/io/decisiontrace/benchmarks/: DecisionScopeBenchmark.java
sdk/java/decision-trace-bom/: pom.xml
sdk/java/decision-trace-core/: README.md  pom.xml
sdk/java/decision-trace-core/src/main/java/io/decisiontrace/core/: DecisionScope.java  DecisionSpec.java  DecisionTraceVersion.java
sdk/java/decision-trace-core/src/test/java/io/decisiontrace/core/: DecisionScopeTest.java
sdk/java/decision-trace-samples/: README.md  pom.xml
sdk/java/decision-trace-samples/src/main/java/io/decisiontrace/samples/: GoldenFlowApplication.java
sdk/java/decision-trace-samples/src/test/java/io/decisiontrace/samples/: GoldenFlowIntegrationTest.java
sdk/java/decision-trace-spring-boot-starter/: README.md  pom.xml
sdk/java/decision-trace-spring-boot-starter/src/test/java/io/decisiontrace/spring/: DecisionTraceExporterAutoConfigurationTest.java  DecisionTraceRuntimeIntegrationTest.java  DecisionTraceSpringBootStarterTest.java
sdk/python/: README.md
sdk/python/decision_trace/: __init__.py  cli.py  storage.py  tracer.py  validate.py  version.py
sdk/python/decision_trace/exporters/: __init__.py  console.py  file.py  http.py  otel.py
sdk/python/decision_trace/integrations/: decorator.py  langchain.py  langgraph.py  openai_tools.py
sdk/python/examples/: quickstart.py  refund_demo.py  refund_flow.py
sdk/python/examples/agent_approval_chain/: run.py
sdk/python/examples/policy_failure_and_evaluation/: run_decision.py
sdk/python/examples/refund_workflow/: run.py
sdk/python/tests/: test_cli.py  test_repo_layout.py  test_storage.py  test_tracer.py  test_validate.py
services/collector/: README.md
services/collector/decision_trace_collector/: api.py  main.py  settings.py  storage.py  validate.py
services/collector/tests/: test_ingest_validation.py
tests/: test_cli.py  test_linter.py  test_otel_exporter.py  test_safety.py  test_tracer.py
(+60 files in other folders)
